# lontar

./: .gitignore  Cargo.toml
lontar_core/: Cargo.toml
lontar_web/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
lontar_web/src/: App.tsx  index.css
lontar_web/src/lib/: db.ts  util.ts
lontar_web/src/pages/: auth_guard.tsx
lontar_web/src/pages/components/: TextInput.tsx
lontar_web/src/pages/notes/: layout.tsx  note-provider.tsx  page.tsx  virtualist.tsx
lontar_web/src/pages/notes/note/: page.tsx  utils.ts
lontar_web/src/pages/signin/: page.tsx
lontar_workers/: .gitignore  Cargo.toml  wrangler.toml
lontar_workers/migrations/: 0001_init_tables.sql
lontar_workers/src/: lib.rs
