[package]
name = "lontar_workers"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["wasm-bindgen"] }
uuid = { workspace = true, features = ["js", "v7"]}
worker = { version = "0.8.5", features = ["d1"] }
